--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,13 @@ body {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
+#output  {
+  color: #e65c00 ;
+}
+#output  hr{
+  border-color: #e65c00 ;
+}
+
 
 #wrapper.toggled #sidebar-wrapper {
   width: 250px;
@@ -49,11 +56,7 @@ body {
 	margin-left: 0;
 	background-color: rgb(221, 92, 6);
 }
-/*.header h1 {
-	display: flex;
-	justify-content:center;
 
-}*/
 #play-title {
 	font-family: sans-serif;
 	font-size: 30px;
